--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
+  "homepage": "https://assem1637.github.io/React_Notes_App/",
   "name": "ahmed-assem",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
+    "gh-pages": "^4.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.3.3",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
+    "react-tsparticles": "^2.3.3",
+    "tsparticles": "^2.3.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
